data/derived/comb/progs/unify/prog0468.ml.out
Characters 150-181:
  | (1,3) -> buildCosine(buildOp1(buildX()))
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
